# RC-CAR-ROS2

./: README.md  error  esc_calibrate_pca9685.sh  esc_test.py  frames_2025-10-27_19.59.42.gv  frames_2025-10-27_22.10.52.gv  joy-1.py  joy2.py
esc_env/: pyvenv.cfg
pigpio-master/: CMakeLists.txt
pigpio-master/cmake/: FindRT.cmake  setup.py.in
pip_venv/: pyvenv.cfg
src/Manual_ctrl/: README.md  joy_PWM.py  joy_config.py  joy_drive.py  joy_raw.py  motor_signals.py  package.xml  setup.py
src/Manual_ctrl/Manual_ctrl/: joy_drive.py
src/Manual_ctrl/launch/: joy_drive.launch.py  manual_ctrl.launch.py  motor_signals.launch.py
src/gap_follow/: CMakeLists.txt  package.xml  setup.py
src/gap_follow/gap_follow/: __init__.py  gap_follow_node.py
src/gap_follow/scripts/: reactive_node.py
src/gap_follow/src/: reactive_node.cpp
src/lcd_eyes/: package.xml  setup.py
src/lcd_eyes/lcd_eyes/: eye_display.py
src/ld_ctrl/: CMakeLists.txt  package.xml  setup.py
src/ld_ctrl/config/: slam_toolbox_async.yaml
src/ld_ctrl/launch/: base_link.launch.py  lane_detection.launch.py  ld_ctrl.launch.py  slam_async.launch.py
src/ld_ctrl/ld_ctrl/: lane_controller.py  lane_detector.py
src/llm_ctrl/: CMakeList.txt  README.md  json_to_ackermann.py  package.xml  setup.cfg  setup.py
src/llm_ctrl/launch/: controller.launch.py  input.launch.py  json_to_ackermann.launch.py  llm_ctrl.launch.py  llm_drive.launch.py  motor_signals.launch.py
src/llm_ctrl/llm_ctrl/: __init__.py  controller.py  input.py  json_to_ackermann.py  llm_drive.py  motor_signals.py  voice.py
src/llm_ctrl/scripts/: READNE.md  controller.py  input.py  ollama_test  requirements.txt  shm.py
src/manual_ctrl/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/manual_ctrl/launch/: joy_drive.launch.py  joy_raw.launch.py  jpy_raw.launch.py  manual_ctrl.launch.py  motor_signals.launch.py
src/manual_ctrl/manual_ctrl/: .motor_signals.py.swp  Ackerman_sender.py  Arduino_ide.txt  ackermann_receiver.py  joy_config.py  joy_drive.py  joy_raw.py  ld_ctrl_manual.py  motor_signals.py  motor_signals_new.py
src/manual_ctrl/manual_ctrl/old files/: motor_signals12.py  riyan_motor_signals.py
src/oled_eyes/: package.xml  setup.cfg  setup.py
src/oled_eyes/launch/: oled_eyes.launch.py
src/oled_eyes/oled_eyes/: oled_eyes.py
src/roboeyes/: package.xml
src/roboeyes/launch/: roboeyes.launch.py
src/roboeyes/roboeyes/: roboeyes.py  setup.py
src/safety_node/: package.xml  setup.py
src/safety_node/safety_node/: safety_node.py
src/simulator/: README.md  package.xml  requirements.txt  setup.py
src/simulator/config/: sim.yaml
src/simulator/launch/: ego_racecar.xacro  gym_bridge_launch.py
src/simulator/simulator/: gym_bridge.py
src/wall_follow/: package.xml
src/wall_follow/wall_follow/: wall_follow_node.py
