<?xml version="1.0"?>
<package format="3">
  <name>lcd_eyes</name>
  <version>0.0.1</version>
  <description>LCD eye animation node for RC car visualization.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

