<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ld_ctrl</name>
  <version>0.0.1</version>
  <description>Lane Detection + YDLiDAR Control for RC-CAR-ROS2</description>
  <maintainer email="nitish@example.com">Nitish</maintainer>
  <license>Apache License 2.0</license>

  <!-- PYTHON BUILD SYSTEM -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 Message Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- External Python Dependencies -->
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
