<?xml version="1.0"?>
<package format="3">
  <name>oled_eyes</name>
  <version>0.0.1</version>
  <description>OLED eyes visualization node for Ackermann car</description>

  <maintainer email="your@email.com">Manoj</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>python3-adafruit-ssd1306</exec_depend>
  <exec_depend>python3-pil</exec_depend>
   <export>
      <build_type>ament_python</build_type>
  </export>
</package>
